setup testing library - Integrate jest library for testing - Write first test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,12 +23,14 @@
 
 		"types": [
 			"node",
+			"jest"
 		]
     },
 	"exclude": [
 		"node_modules/"
 	],
     "include": [
-        "./src/**/*"
+        "./src/**/*",
+        "./spec/**/*"
     ]
 }
