--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "Elias Mawa",
 	"private": true,
 	"scripts": {
+		"test": "jest",
 		"watch": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/server.ts",
 		"serve": "ts-node ./src/server.ts",
 		"build": "tsc",
@@ -20,6 +21,7 @@
 		"koa-bodyparser": "^4.3.0",
 		"koa-json": "^2.0.2",
 		"koa-router": "^10.0.0",
+		"koa-session": "^6.2.0",
 		"koa-websocket": "^6.0.0",
 		"mongodb": "3.6.3",
 		"mysql": "^2.18.1",
@@ -30,7 +32,9 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
+		"@jest/types": "^27.0.2",
 		"@types/bcrypt": "^3.0.0",
+		"@types/jest": "^26.0.23",
 		"@types/joi": "^17.2.3",
 		"@types/koa": "^2.11.6",
 		"@types/koa-bodyparser": "^4.3.0",
@@ -43,8 +47,11 @@
 		"@types/node-fetch": "^2.5.8",
 		"@types/uuid": "^8.3.0",
 		"eslint": "^7.18.0",
+		"jest": "^27.0.5",
 		"nodemon": "^2.0.7",
 		"prettier": "^2.3.1",
+		"supertest": "^6.1.3",
+		"ts-jest": "^27.0.3",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.3"
 	}
