--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
 		"koa-websocket": "^6.0.0",
 		"mongodb": "3.6.3",
 		"mysql": "^2.18.1",
+		"nanoid": "^3.1.23",
 		"node": "^15.4.0",
 		"node-fetch": "^2.6.1",
+		"qs": "^6.10.1",
 		"typeorm": "^0.2.30",
-		"uid": "^2.0.0",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
