--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
 		"@types/node": "^14.14.22",
 		"@types/node-fetch": "^2.5.8",
 		"@types/uuid": "^8.3.0",
+		"@typescript-eslint/eslint-plugin": "^4.28.1",
+		"@typescript-eslint/parser": "^4.28.1",
 		"eslint": "^7.18.0",
+		"eslint-config-prettier": "^8.3.0",
 		"jest": "^27.0.5",
 		"nodemon": "^2.0.7",
-		"prettier": "^2.3.1",
+		"prettier": "^2.3.2",
 		"ts-jest": "^27.0.3",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.3"
