--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "shrimp-server",
+	"name": "shrymp-server",
 	"version": "0.0.1",
 	"license": "GPLv3",
-	"repository": "https://github.com/ottxrgxist/shrimp",
+	"repository": "https://github.com/theluckyegg/shrimp",
 	"author": "Elias Mawa",
 	"private": true,
 	"scripts": {
@@ -15,7 +15,6 @@
 	},
 	"dependencies": {
 		"@koa/cors": "^3.1.0",
-		"bcrypt": "^5.0.0",
 		"joi": "^17.3.0",
 		"koa": "^2.13.1",
 		"koa-bodyparser": "^4.3.0",
@@ -33,8 +32,6 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"@jest/types": "^27.0.2",
-		"@types/bcrypt": "^3.0.0",
 		"@types/jest": "^26.0.23",
 		"@types/joi": "^17.2.3",
 		"@types/koa": "^2.11.6",
@@ -45,15 +42,12 @@
 		"@types/koa-websocket": "^5.0.5",
 		"@types/koa__cors": "^3.0.2",
 		"@types/node": "^14.14.22",
-		"@types/node-fetch": "^2.5.8",
 		"@types/uuid": "^8.3.0",
 		"@typescript-eslint/eslint-plugin": "^4.28.1",
 		"@typescript-eslint/parser": "^4.28.1",
 		"eslint": "^7.18.0",
-		"eslint-config-prettier": "^8.3.0",
 		"jest": "^27.0.5",
 		"nodemon": "^2.0.7",
-		"prettier": "^2.3.2",
 		"ts-jest": "^27.0.3",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.3"
